--- a/yeast_testing.ipynb
+++ b/yeast_testing.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-06T18:38:11.442240Z",
+     "start_time": "2025-02-06T18:38:11.387413Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "import numpy as np",
+   "id": "850ecf7b1933ddf8",
+   "outputs": [],
+   "execution_count": 1
+  },
+  {
    "metadata": {},
    "cell_type": "markdown",
    "source": [
@@ -23,8 +36,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-02-05T21:07:58.109027Z",
-     "start_time": "2025-02-05T21:07:58.097437Z"
+     "end_time": "2025-02-06T18:38:12.419575Z",
+     "start_time": "2025-02-06T18:38:12.416470Z"
     }
    },
    "source": [
@@ -44,7 +57,70 @@
      ]
     }
    ],
-   "execution_count": 7
+   "execution_count": 2
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "To get an idea of how long we want/need this process to take, we will assume an acquisition time on average of 250 ms per image for images at 400 - 720 nm in 10 nm increments.",
+   "id": "fd0b69946199ceeb"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-06T18:40:44.947208Z",
+     "start_time": "2025-02-06T18:40:44.941936Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "acq_time = len(np.arange(400, 730, 10)) * 250 / 1000  # s\n",
+    "print(acq_time, 's per image stack')\n",
+    "acq_time /= 60\n",
+    "print(acq_time, 'm per image stack')"
+   ],
+   "id": "ec2b7fdba567c58e",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8.25 s per image stack\n",
+      "0.1375 m per image stack\n"
+     ]
+    }
+   ],
+   "execution_count": 10
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "We'd like to get stacks at each percentage, so to simplify, we can assume that our phantom will range from 100 to 0% (in reality it wont reach 0%). That means we need to capture 100 image stacks, so deoxygenation needs to take...",
+   "id": "77c5387f81d3eafa"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-06T18:42:40.467994Z",
+     "start_time": "2025-02-06T18:42:40.463343Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "deox_time = acq_time * 100\n",
+    "print('At least', deox_time, 'min to deoxygenate')"
+   ],
+   "id": "fdf942473176ca65",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "At least 13.750000000000002 min to deoxygenate\n"
+     ]
+    }
+   ],
+   "execution_count": 11
   },
   {
    "metadata": {},
@@ -52,7 +128,7 @@
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "ec2b7fdba567c58e"
+   "id": "b79dabcd44c315c5"
   }
  ],
  "metadata": {
